typ
